--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "dkr:run": "docker run -d -p 3000:3000 --name kosmic-ui_container kosmic/ui-chal"
   },
   "dependencies": {
+    "@emotion/cache": "11.11.0",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "5.14.18",
+    "@mui/material": "5.14.18",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tss-react": "4.9.3"
   },
   "devDependencies": {
     "@types/node": "^20",
