--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@mui/material": "5.14.18",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "tss-react": "4.9.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
