--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@mui/base": "5.0.0-beta.24",
     "@mui/icons-material": "5.14.18",
     "@mui/material": "5.14.18",
+    "framer-motion": "10.16.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
